--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,4 +1,4 @@
-<% std_opts = "--format 'pretty'" %>
+<% std_opts = "--color --format 'pretty'" %>
 default: <%= std_opts %> --strict features
-ok: <%= std_opts %> --no-color --strict --tags ~@wip features
+ok: <%= std_opts %> --strict --tags ~@wip features
 wip: <%= std_opts %> --tags @wip:1 --wip features
