--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ gemfile:
   - Gemfile
 script:
   - bundle exec rake
-  - bundle exec warder --style-guide --magick-numbers Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - bundle exec warder --style-guide Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - bundle exec warder --magick-numbers Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - bundle exec warder --code-complexity Gemfile Rakefile warder.gemspec bin/ lib/ features/
