--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ script:
   - bundle exec warder --style-guide Gemfile Rakefile warder.gemspec bin/ lib/ features/
   - bundle exec warder --magick-numbers Gemfile Rakefile warder.gemspec bin/ lib/ features/
   - bundle exec warder --code-complexity Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - bundle exec warder --code-smells Gemfile Rakefile warder.gemspec bin/ lib/ features/
   - bundle exec warder --code-duplication Gemfile Rakefile bin/ lib/ features/
