--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ script:
   - bundle exec warder --code-complexity Gemfile Rakefile warder.gemspec bin/ lib/ features/
   - bundle exec warder --code-smells Gemfile Rakefile warder.gemspec bin/ lib/ features/
   - bundle exec warder --code-duplication Gemfile Rakefile bin/ lib/ features/
+  - bundle exec warder --bundle-audit
