--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+bundler_args: --jobs=3 --retry=3 --clean --path=bundle
 rvm:
   - 2.0
   - 2.1
@@ -6,10 +7,13 @@ rvm:
 gemfile:
   - Gemfile
 script:
-  - bundle exec rake
-  - bundle exec warder --style-guide Gemfile Rakefile warder.gemspec bin/ lib/ features/
-  - bundle exec warder --magick-numbers Gemfile Rakefile warder.gemspec bin/ lib/ features/
-  - bundle exec warder --code-complexity Gemfile Rakefile warder.gemspec bin/ lib/ features/
-  - bundle exec warder --code-smell Gemfile Rakefile warder.gemspec bin/ lib/ features/
-  - bundle exec warder --code-duplication Gemfile Rakefile bin/ lib/ features/
-  - bundle exec warder --bundle-audit
+  - ./bin/rake
+  - ./bin/warder --style-guide Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - ./bin/warder --magick-numbers Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - ./bin/warder --code-complexity Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - ./bin/warder --code-smell Gemfile Rakefile warder.gemspec bin/ lib/ features/
+  - ./bin/warder --code-duplication Gemfile Rakefile bin/ lib/ features/
+  - ./bin/warder --bundle-audit
+cache:
+  directories:
+  - bundle
