--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: ruby
 rvm:
-  - 2.0
-  - 2.1
-  - 2.2
+  - 2.1.9
+  - 2.2.5
+  - 2.3.1
 gemfile:
   - Gemfile
+before_install:
+  - gem install bundler --no-ri --no-rdoc
 script:
   - bundle exec rake
   - bundle exec warder --style-guide Gemfile Rakefile warder.gemspec bin/ lib/ features/
